*Metals family wide bug-fixes and updates. No longer requires BaseMetals - only MMDLib and MMD OreSpawn.